--- a/FinalProject/appsettings.Development.json
+++ b/FinalProject/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     
-    "DefaultConnection": "Data Source=DESKTOP-GBVA1I2; Initial Catalog=RentNowDatabase; Integrated Security=true;"
+    "DefaultConnection": "Data Source=DESKTOP-GBVA1I2; Initial Catalog=Test; Integrated Security=true;"
 
   },
   "Logging": {
